--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,7 +1,7 @@
 head
   title Simon Game
-  link(rel="stylesheet", href="/css/style.css")
-  link(rel="stylesheet", href="/css/normalize.css")
+  link(rel="stylesheet", href="css/style.css")
+  link(rel="stylesheet", href="css/normalize.css")
   link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Reem+Kufi|Scope+One|Yatra+One|Montserrat|Raleway")
   link(rel="stylesheet", href="css/font-awesome.min.css")
   link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css")
